fixedspacing

--- a/mypersonalsite/style/style.css
+++ b/mypersonalsite/style/style.css
@@ -73,28 +73,28 @@ body {
 .home-grid {
     display: grid;
     gap: 40px;
-    grid-template-columns:  2fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     background-color: #fff;
     color: #444;
     margin-top: 25px;
-    grid-gap: 1em
+    grid-gap: 1em 1em;
   }
 .banana-pancakes {
     grid-column: 1/2;
     grid-row: 1/3;
-    max-width: 100%;
+    max-width: 117%;
 }
 .overnight-oats{
     grid-column: 2/3;
     grid-row: 1/2;
-    max-width: 100%;
+    max-width: 85%;
     justify-self: end;
 }
 .muffins{
     grid-column: 2/3;
     grid-row: 2/3;
-    max-width: 100%;
+    max-width: 85%;
     justify-self: end;
 }
 .latest-recipe{
@@ -110,7 +110,17 @@ body {
     text-align: center;
     color: white;
 }
+.textbox {
+    position: absolute;
+    bottom: -250px;
+    right: 40px;
+    background-color: black;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 .text-block {
+    position: absolute;
     bottom: 20px;
     right: 20px;
     background-color: black;
